imrpove rubric creation flow
